# feishu-opencode-bridge

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: developer-guide.md  feishu-setup.md  langfuse.md  operations.md  user-guide.md
src/feishu_opencode_bridge/: __init__.py  app.py  bot.py  card_ui.py  cards.py  cli.py  commands.py  config.py  feishu_event.py  identity.py  lark_client.py  message_content.py  oncall.py  opencode.py  ports.py  prompt.py  runtime.py  state.py  topic_context.py  types.py  users.py  worker.py
tests/: test_bot.py  test_cards.py  test_message_content.py  test_oncall.py  test_opencode.py
