[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "feishu-opencode-bridge"
version = "0.1.0"
description = "A Feishu bot bridge that routes topic mentions to OpenCode."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110",
  "lark-oapi>=1.6.8",
  "python-dotenv>=1.0",
  "urllib3<2",
  "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
feishu-opencode-bridge = "feishu_opencode_bridge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
